lib/src/compiler/tests/testdata/errors/54.out
error[E002]: wrong type
 --> line:4:29
  |
4 |     test_proto2.array_int64["foo"]
  |                             ^^^^^ expression should be `integer`, but it is `string`
  |